--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#hero {
+  background-image: url("/images/mobile/image-hero.jpg");
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100%;
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
+@media (min-width: 768px) {
+  #hero {
+    background-image: url("/images/desktop/image-hero.jpg");
+    background-repeat: no-repeat;
+    height: 70vh;
+    width: 100%;
+    background-size: cover;
+    background-position: 50% 50%;
+  }
+
+  /* #heading-text > h1 {
+    word-wrap: break-word;
+  } */
+}
